fix: including overflow hidden

--- a/css/all.css
+++ b/css/all.css
@@ -51,6 +51,7 @@
   position: absolute;
   top: 0;
   left: 0;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -94,6 +95,7 @@
   width: 100%;
   height: 100vh;
   position: absolute;
+  overflow: hidden;
 }
 .step-2 .bg-image {
   height: 20vh;
@@ -187,6 +189,7 @@
   width: 100%;
   height: 100vh;
   position: absolute;
+  overflow: hidden;
 }
 .step-3 .bg-image {
   height: 20vh;
@@ -311,6 +314,7 @@
   width: 100%;
   height: 100vh;
   position: absolute;
+  overflow: hidden;
 }
 .step-4 .bg-image {
   height: 20vh;
@@ -387,6 +391,7 @@
   width: 100%;
   height: 100vh;
   position: absolute;
+  overflow: hidden;
 }
 .step-5 .bg-image {
   height: 20vh;
